[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laser_tilt"
version = "0.1.0"
description = "Real-time section alignment + correction using ICP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Edoardo Bramini" }]

dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
laser_tilt-gui = "laser_tilt.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src","vendor"]